# simFerro

./: .gitmodules  CMakeLists.txt  README.md
examples/simple/: CMakeLists.txt  main.cpp  runSingle.py
include/: magnet.hpp  sim_ferro.hpp  sim_params_ferro.hpp
src/: magnet.cpp  sim_ferro.cpp
